# dividend-investment-analysis

./: .editorconfig  .gitattributes  .gitignore  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json
backend/: dockerfile  pyproject.toml
backend/alembic/: alembic.ini
backend/app/: dependencies.py  main.py
backend/app/core/: config.py
backend/formulas/: core_dividend_safety_and_coverage.py  growth_and_projection.py  historical_and_trend_analysis.py  quality_and_sustainability_metrics.py  risk_adjusted_return_metrics.py  sector_specific_metrics.py  valuation_and_relative_metrics.py
frontend/dividend-analyzer/: package-lock.json  package.json  vite.config.ts
frontend/dividend-analyzer/src/: App.tsx
frontend/dividend-analyzer/src/routes/: __root.tsx  about.tsx  index.tsx
