[project]
name = "dividend-backend"
version = "0.1.0"
description = "Dividend Investment Analysis API"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "numpy>=2.3.2",
    "orjson>=3.11.2",
    "psycopg2>=2.9.10",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "ujson>=5.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-alembic>=0.12.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.1",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.1.1",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.10",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--randomly-seed=42",           # Reproducible randomization
    "--cov=app",                     # Coverage by default
    "--cov-branch",                  # Branch coverage
    "--cov-report=term-missing",     # Terminal report
    "--cov-report=html",             # HTML report
    "--asyncio-mode=auto",           # Auto handle async tests
    "-v",                            # Verbose
    "--tb=short",                    # Shorter tracebacks
    "--strict-markers",              # Strict marker checking
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
env = [
    "DATABASE_URL=postgresql://cobriensr:admin@localhost/dividend",
    "TESTING=true",
]
